fixed spacing of 9 buttons in HowItoWorks page

--- a/howpage.css
+++ b/howpage.css
@@ -24,13 +24,17 @@
  .text5 h7{
     color: rgb(0, 98, 204);
  }
+a{
+   margin:2px 11px;
+}
  .button9{
    display: block;
    width:25%;
  }
 .button9 img{
-   width:160%;
+   width:180%;
    padding:0 20px;
-   
-
+}
+.button9 .marg{
+   padding:0 12px;
 }
